@@ -4,6 +4,10 @@
 # $Id$
 
   13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/target/snapshot.py, modules/catalyst/util.py:
+  Create catalyst.util.rsync() helper function
+
+  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/target/generic_stage.py,
   modules/catalyst/target/livecd_stage1.py,
   modules/catalyst/target/livecd_stage2.py,
